--- a/TDM_G4-0.2/CMakeLists.txt
+++ b/TDM_G4-0.2/CMakeLists.txt
@@ -46,6 +46,7 @@ target_link_libraries(TDM_G4exec ${Geant4_LIBRARIES} )
 set(TDM_SCRIPTS
     vis.mac
     example.mac
+    analisis.C
   )
 
 foreach(_script ${TDM_SCRIPTS})
