Se agrega Espectro de 60 keV y modifica el CMakeLists.txt en TDM_G4-0.6

--- a/TDM_G4-0.6/CMakeLists.txt
+++ b/TDM_G4-0.6/CMakeLists.txt
@@ -49,6 +49,7 @@ set(TDM_SCRIPTS
     analisis.C
     MODIFICACION.C
     examplecalibracion.mac
+    EspectroEnergia60keV.dat
   )
 
 foreach(_script ${TDM_SCRIPTS})
