Se agregaron las carpetas de TDM_RunActionMessenger.hh y TDM_RunActionMessenger.hh. El programa aun corre con un problema, aun no detecta el comando que se le esta mandando desde el Messenger.

--- a/Build6/.project
+++ b/Build6/.project
@@ -192,6 +192,11 @@
 			<location>/home/eduardo/Geant4/Github Clones/TDM/TDM_G4-0.6/src/TDM_RunAction.cc</location>
 		</link>
 		<link>
+			<name>[Targets]/[exe] TDM_G4exec/Source Files/TDM_RunActionMessenger.cc</name>
+			<type>1</type>
+			<location>/home/eduardo/Geant4/Github Clones/TDM/TDM_G4-0.6/src/TDM_RunActionMessenger.cc</location>
+		</link>
+		<link>
 			<name>[Targets]/[exe] TDM_G4exec/Header Files</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
@@ -245,6 +250,11 @@
 			<name>[Targets]/[exe] TDM_G4exec/Header Files/TDM_RunAction.hh</name>
 			<type>1</type>
 			<location>/home/eduardo/Geant4/Github Clones/TDM/TDM_G4-0.6/include/TDM_RunAction.hh</location>
+		</link>
+		<link>
+			<name>[Targets]/[exe] TDM_G4exec/Header Files/TDM_RunActionMessenger.hh</name>
+			<type>1</type>
+			<location>/home/eduardo/Geant4/Github Clones/TDM/TDM_G4-0.6/include/TDM_RunActionMessenger.hh</location>
 		</link>
 		<link>
 			<name>[Targets]/[exe] TDM_G4exec/CMake Rules</name>
