--- a/Build6/Makefile
+++ b/Build6/Makefile
@@ -393,6 +393,33 @@ src/TDM_RunAction.cc.s:
 	$(MAKE) -f CMakeFiles/TDM_G4exec.dir/build.make CMakeFiles/TDM_G4exec.dir/src/TDM_RunAction.cc.s
 .PHONY : src/TDM_RunAction.cc.s
 
+src/TDM_RunActionMessenger.o: src/TDM_RunActionMessenger.cc.o
+
+.PHONY : src/TDM_RunActionMessenger.o
+
+# target to build an object file
+src/TDM_RunActionMessenger.cc.o:
+	$(MAKE) -f CMakeFiles/TDM_G4exec.dir/build.make CMakeFiles/TDM_G4exec.dir/src/TDM_RunActionMessenger.cc.o
+.PHONY : src/TDM_RunActionMessenger.cc.o
+
+src/TDM_RunActionMessenger.i: src/TDM_RunActionMessenger.cc.i
+
+.PHONY : src/TDM_RunActionMessenger.i
+
+# target to preprocess a source file
+src/TDM_RunActionMessenger.cc.i:
+	$(MAKE) -f CMakeFiles/TDM_G4exec.dir/build.make CMakeFiles/TDM_G4exec.dir/src/TDM_RunActionMessenger.cc.i
+.PHONY : src/TDM_RunActionMessenger.cc.i
+
+src/TDM_RunActionMessenger.s: src/TDM_RunActionMessenger.cc.s
+
+.PHONY : src/TDM_RunActionMessenger.s
+
+# target to generate assembly for a file
+src/TDM_RunActionMessenger.cc.s:
+	$(MAKE) -f CMakeFiles/TDM_G4exec.dir/build.make CMakeFiles/TDM_G4exec.dir/src/TDM_RunActionMessenger.cc.s
+.PHONY : src/TDM_RunActionMessenger.cc.s
+
 # Help Target
 help:
 	@echo "The following are some of the valid targets for this Makefile:"
@@ -432,6 +459,9 @@ help:
 	@echo "... src/TDM_RunAction.o"
 	@echo "... src/TDM_RunAction.i"
 	@echo "... src/TDM_RunAction.s"
+	@echo "... src/TDM_RunActionMessenger.o"
+	@echo "... src/TDM_RunActionMessenger.i"
+	@echo "... src/TDM_RunActionMessenger.s"
 .PHONY : help
 
 
