En la salida se muestra el nucleo que se encuentras corriendo, asi como se logro introducir la semilla a cada uno de los hilos.

--- a/Build6/.cproject
+++ b/Build6/.cproject
@@ -24,6 +24,7 @@
 				<pathentry kind="mac" name="G4VERBOSE" path="" value=""/>
 				<pathentry kind="mac" name="G4UI_USE" path="" value=""/>
 				<pathentry kind="mac" name="G4VIS_USE" path="" value=""/>
+				<pathentry kind="mac" name="G4MULTITHREADED" path="" value=""/>
 				<pathentry kind="mac" name="G4UI_USE_TCSH" path="" value=""/>
 				<pathentry kind="mac" name="G4INTY_USE_QT" path="" value=""/>
 				<pathentry kind="mac" name="G4UI_USE_QT" path="" value=""/>
