Archivo con los cambios de los TLD, listo para correr en Beremiz

--- a/TDM_G4-0.7/CMakeLists.txt
+++ b/TDM_G4-0.7/CMakeLists.txt
@@ -50,6 +50,7 @@ set(TDM_SCRIPTS
     MODIFICACION.C
     examplecalibracion.mac
     EspectroEnergia60keV.dat
+    generador.py
   )
 
 foreach(_script ${TDM_SCRIPTS})
